<resources>
    <string name="app_name" translatable="false">LuckyTool</string>
    <string name="xposeddescription">Xposed module optimized for extensions to ColorOS</string>
    <string name="nav_function">Function</string>
    <string name="nav_home">Home page</string>
    <string name="nav_other">Other</string>
    <string name="nav_log">Logs</string>
    <string name="nav_setting">Settings</string>
    <string name="fragment_source">SourceCode</string>
    <string name="theme_title">Theme</string>
    <string name="theme_title_summary">Page will be automatically refreshed</string>
    <string name="use_dynamic_color">Dynamic colors</string>
    <string name="use_dynamic_color_summary">Use dynamic colors</string>
    <string name="dark_theme">Dark theme</string>
    <string name="follow_system">Follow system</string>
    <string name="privacy_agreement">Privacy Agreement</string>
    <string name="auto_check_update">Automatically check for updates</string>
    <string name="auto_check_update_summary">Automatically check for updates when opening the module home page</string>
    <string name="read_agreement">You need to read and agree to the following content before you can use this module</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="clear_all_data_summary">Clear all function data in the module</string>
    <string name="clear_all_data_message">Make sure you want to clear all the function data of the module, and you need to reset the function after clearing?</string>
    <string name="other_settings">Other settings</string>
    <string name="hide_xp_page_icon">Hide XP Page Icon</string>
    <string name="hide_desktop_appicon">Hide desktop app icon</string>
    <string name="hide_desktop_appicon_summary">LSPosed must be turned off to force desktop icons</string>
    <string name="about_title">About</string>
    <string name="about_author">Author</string>
    <string name="donate">Donate reward</string>
    <string name="donate_summary">Your donation will be the driving force for the module update\nBe sure to leave your nickname or ID when donating</string>
    <string name="qq">QQ</string>
    <string name="wechat">WeChat</string>
    <string name="alipay">AliPay</string>
    <string name="donation_list">Donation List</string>
    <string name="feedback_download">Feedback and Download</string>
    <string name="feedback_download_summary">TG Channels, Groups, Repositories, etc.</string>
    <string name="coolmarket">Cool Home Page</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="lsposed_repo">LSPosed Repository</string>
    <string name="github_repo">Github Repository</string>
    <string name="open_source">Open Source</string>
    <string name="open_source_summary">Click to view the open source list</string>
    <string name="participate_translation">Participate in module translations</string>
    <string name="participate_translation_summary">Go to Crowdin to contribute your translation</string>
    <string name="unsupported_xposed">Please use the latest version of LS Posed to check the scope of the module.\n If you have completed the above, you can click OK to exit the App and open the module</string>
    <string name="menu_reboot">Restart menu</string>
    <string name="menu_settings">Set menu</string>
    <string name="restart_scope">Restart scoped processes</string>
    <string name="restart_scope_message">Are you sure you want to restart all scoped processes except the system framework?\nUse this if the module isn't working!\nMake sure all the relevant scopes are checked!</string>
    <string name="reboot">Restart System</string>
    <string name="fast_reboot">Fast reboot</string>
    <string name="menu_versioninfo">Version Information</string>
    <string name="scope_version_info">Role domain version information</string>
    <string name="restart_scope_summary">Reboot domain in top right</string>
    <string name="Android">System Related</string>
    <string name="app_label">App Name</string>
    <string name="package_name">Package Name</string>
    <string name="version">Version</string>
    <string name="corepatch">Core Patch</string>
    <string name="corepatch_summary">Remove install limits, supports Android 11–13</string>
    <string name="downgr">Allow downgrade apps</string>
    <string name="downgr_summary">Allows the app to override older versions if new versions are installed.</string>
    <string name="authcreak">Disable package manager signature validation</string>
    <string name="authcreak_summary">Signature verification when installing apps can be installed.</string>
    <string name="digestCreak">Disable APK Signature validation</string>
    <string name="digestCreak_summary">Allows overriding directly installed apps with different signatures to the package</string>
    <string name="UsePreSig">Always use the signed installed APP while installing</string>
    <string name="UsePreSig_summary">Is not a normal!danger! Only enable when absolutely needed</string>
    <string name="enhancedMode">Enhancement mode</string>
    <string name="enhancedMode_summary">You can solve some internal integrity check within the app, which does not need to be enabled</string>
    <string name="usepresig_warn">!!! All packages can override installed App!!\nto install unknown packages</string>
    <string name="StatusBar">StatusBar Related</string>
    <string name="StatusBarClock">StatusBar Clock</string>
    <string name="statusbar_clock_enable">Status bar clock total toggle</string>
    <string name="statusbar_clock_show_year">Show year</string>
    <string name="statusbar_clock_show_month">Show month</string>
    <string name="statusbar_clock_show_day">Show date</string>
    <string name="statusbar_clock_show_week">Show week</string>
    <string name="statusbar_clock_show_period">Show period</string>
    <string name="statusbar_clock_show_double_hour">Show Double Hour</string>
    <string name="statusbar_clock_show_second">Show seconds</string>
    <string name="statusbar_clock_hide_spaces">Hide spaces</string>
    <string name="statusbar_clock_show_doublerow">Double row display</string>
    <string name="statusbar_clock_singlerow_fontsize">Single row font size</string>
    <string name="statusbar_clock_doublerow_fontsize">Double row font size</string>
    <string name="statusbar_clock_fontsize_summary">If it is 0, the font size will not be modified</string>
    <string name="StatusBarNetWorkSpeed">StatusBar NetWorkSpeed</string>
    <string name="set_network_speed">Set status bar speed refresh rate 1 s</string>
    <string name="enable_double_row_network_speed">Enable Double Row Network Speed</string>
    <string name="set_network_speed_font_size">Set Network Speed Font Size</string>
    <string name="set_network_speed_padding_bottom">Set Network Speed Padding Bottom</string>
    <string name="StatusBarNotice">StatusBar Notifications</string>
    <string name="StatusBarNotice_summary">Status bar notification related</string>
    <string name="remove_statusbar_devmode">Remove status bar developer option notifications</string>
    <string name="remove_charging_completed">Remove charging completion notification</string>
    <string name="remove_statusbar_top_notification">Remove status bar app upper level notifications</string>
    <string name="remove_statusbar_top_notification_summary">Remove status bar \"This app is displayed on top of other apps\"</string>
    <string name="remove_vpn_active_notification">Remove VPN active</string>
    <string name="remove_vpn_active_notification_summary">Remove status bar VPN active</string>
    <string name="remove_statusbar_bottom_networkwarn">Remove bottom network warning from statusbar</string>
    <string name="remove_statusbar_bottom_networkwarn_summary">Remove bottom network information when the pulldown status bar is expanded</string>
    <string name="remove_flashlight_open_notification">Remove flashlight is open notification</string>
    <string name="remove_app_high_battery_consumption_warning">Remove app high battery consumption warning</string>
    <string name="remove_app_high_battery_consumption_warning_summary">Removed the warning that the application\'s battery consumption is abnormal and needs to be optimized immediately</string>
    <string name="remove_high_performance_mode_notifications">Remove high performance mode notifications</string>
    <string name="StatusBarIcon">StatusBar Icon</string>
    <string name="StatusBarIcon_summary">Status bar icon related</string>
    <string name="StatusBarTopSmallIcon">StatusBar Top Small Icon</string>
    <string name="StatusBarSmallIconStatus">StatusBar Small Icon Status</string>
    <string name="remove_mobile_data_icon">Remove mobile data icon</string>
    <string name="remove_statusbar_securepayment_icon">Remove status bar payment protection icons</string>
    <string name="remove_statusbar_battery_percent">Remove battery percentage number in statusbar</string>
    <string name="remove_statusbar_user_switcher">Remove drop-down status bar multi-user icon</string>
    <string name="remove_wifi_data_inout">Remove WiFi data inout</string>
    <string name="remove_mobile_data_inout">Remove Mobile data inout</string>
    <string name="status_bar_icon_vertical_center">Statusbar icon vertical center</string>
    <string name="StatusBarControlCenter">StatusBar ControlCenter</string>
    <string name="StatusBar_UI_Related">StatusBar UI Related</string>
    <string name="dropdown_statusbar_clock_show_second">DropDown Statusbar Clock show second</string>
    <string name="remove_dropdown_statusbar_clock_style_summary">Colon alignment, red number 1</string>
    <string name="remove_dropdown_statusbar_clock_style">Remove dropdown statusbar clock style</string>
    <string name="remove_statusbar_date_comma">Remove dropdown status bar date comma</string>
    <string name="remove_statusbar_date_comma_summary">Guessing is limited to ZH users</string>
    <string name="remove_drop_down_statusbar_mydevice">remove drop down statusbar my device</string>
    <string name="StatusBar_Tile_Related">StatusBar Tile Related</string>
    <string name="statusbar_tile_enable">Total statusbar tiles switch</string>
    <string name="tile_unexpanded_columns_vertical">No tiles expanded (portrait)</string>
    <string name="tile_unexpanded_columns_horizontal">No tiles expanded (Landscape)</string>
    <string name="tile_expanded_columns_vertical">Expand sticker columns (portrait)</string>
    <string name="tile_expanded_columns_horizontal">Expand sticker columns (Landscape)</string>
    <string name="tile_expanded_rows_vertical">Expand tile rows (vertical)</string>
    <string name="tile_columns_horizontal_c13">Tile Columns (Landscape)</string>
    <string name="LockScreen">Lockscreen Related</string>
    <string name="remove_lock_screen_redone">Remove lock screen red 1</string>
    <string name="remove_lock_screen_bottom_left_button">Remove lockscreen bottom left button</string>
    <string name="remove_lock_screen_bottom_right_camera">Remove lockscreen bottom right camera</string>
    <string name="set_lock_screen_centered">Center the lockscreen component</string>
    <string name="set_lock_screen_centered_summary">Only for systems where the lock screen cannot be centered in the settings</string>
    <string name="remove_lock_screen_bottom_sos_button">Remove SOS emergency contact button</string>
    <string name="remove_lock_screen_bottom_sos_button_summary">Removed the SOS emergency button at the bottom of the unlock page</string>
    <string name="remove_72hour_password_verification">Remove 72-hour password authentication</string>
    <string name="remove_72hour_password_verification_summary">Removed the security restriction of not using a password to unlock within 72 hours after booting \n Effective after system restart</string>
</resources>