<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/nav_other"
            android:enabled="true" />
    <item
            android:id="@+id/nav_function"
            android:icon="@drawable/ic_baseline_extension_24"
            android:title="@string/nav_function"
            android:enabled="true" />
    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home"
            android:enabled="true" />
    <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/nav_log"
            android:enabled="true" />
    <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_setting"
            android:enabled="true" />
</menu>