<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_container"
        app:startDestination="@id/nav_home">
    
    <fragment
            android:id="@+id/nav_home"
            android:name="com.luckyzyx.luckytool.ui.fragment.HomeFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_home" />
    <fragment
            android:id="@+id/nav_other"
            android:name="com.luckyzyx.luckytool.ui.fragment.OtherFragment"
            android:label="@string/nav_other"
            tools:layout="@layout/fragment_other">
        <action
                android:id="@+id/action_nav_other_to_systemQuickEntry"
                app:destination="@id/systemQuickEntry"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/nav_function"
            android:name="com.luckyzyx.luckytool.ui.fragment.XposedFragment"
            android:label="@string/nav_function">
        <action
                android:id="@+id/action_nav_xposed_to_android"
                app:destination="@id/android"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_statusBar"
                app:destination="@id/statusBar"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_miscellaneous"
                app:destination="@id/miscellaneous"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_application"
                app:destination="@id/application"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_desktop"
                app:destination="@id/desktop"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_lockScreen"
                app:destination="@id/lockScreen"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_screenshot"
                app:destination="@id/screenshot"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_themeStore"
                app:destination="@id/themeStore"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_everyimage"
                app:destination="@id/everyimage"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_alphaBackupPro"
                app:destination="@id/alphaBackupPro"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_camera"
                app:destination="@id/camera"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_oplusGames"
                app:destination="@id/oplusGames"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_nav_xposed_to_cloudService"
                app:destination="@id/cloudService"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/nav_log"
            android:name="com.luckyzyx.luckytool.ui.fragment.LoggerFragment"
            android:label="@string/nav_log" />
    <fragment
            android:id="@+id/nav_setting"
            android:name="com.luckyzyx.luckytool.ui.fragment.SettingsFragment"
            android:label="@string/nav_setting">
        <action
                android:id="@+id/action_nav_setting_to_sourceFragment"
                app:destination="@id/sourceFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/sourceFragment"
            android:name="com.luckyzyx.luckytool.ui.fragment.SourceFragment"
            android:label="@string/fragment_source" />
    
    <fragment
            android:id="@+id/android"
            android:name="com.luckyzyx.luckytool.ui.fragment.Android"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/statusBarNotice"
            android:name="com.luckyzyx.luckytool.ui.fragment.StatusBarNotice"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/statusBarIcon"
            android:name="com.luckyzyx.luckytool.ui.fragment.StatusBarIcon"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/statusBarControlCenter"
            android:name="com.luckyzyx.luckytool.ui.fragment.StatusBarControlCenter"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/statusBarClock"
            android:name="com.luckyzyx.luckytool.ui.fragment.StatusBarClock"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/desktop"
            android:name="com.luckyzyx.luckytool.ui.fragment.Desktop"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/lockScreen"
            android:name="com.luckyzyx.luckytool.ui.fragment.LockScreen"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/screenshot"
            android:name="com.luckyzyx.luckytool.ui.fragment.Screenshot"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/application"
            android:name="com.luckyzyx.luckytool.ui.fragment.Application"
            android:label="{title_label}">
        <action
                android:id="@+id/action_application_to_multiFragment"
                app:destination="@id/multiFragment"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/camera"
            android:name="com.luckyzyx.luckytool.ui.fragment.Camera"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/oplusGames"
            android:name="com.luckyzyx.luckytool.ui.fragment.OplusGames"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/cloudService"
            android:name="com.luckyzyx.luckytool.ui.fragment.CloudService"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/themeStore"
            android:name="com.luckyzyx.luckytool.ui.fragment.ThemeStore"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/everyimage"
            android:name="com.luckyzyx.luckytool.ui.fragment.Everyimage"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/multiFragment"
            android:name="com.luckyzyx.luckytool.ui.fragment.MultiFragment"
            android:label="{title_label}"
            tools:layout="@layout/fragment_multi">
        <action
                android:id="@+id/action_multiFragment_self"
                app:destination="@id/multiFragment" />
    </fragment>
    <fragment
            android:id="@+id/statusBar"
            android:name="com.luckyzyx.luckytool.ui.fragment.StatusBar"
            android:label="{title_label}">
        <action
                android:id="@+id/action_statusBar_to_statusBarNotice"
                app:destination="@id/statusBarNotice"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_statusBar_to_statusBarControlCenter"
                app:destination="@id/statusBarControlCenter"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_statusBar_to_statusBarClock"
                app:destination="@id/statusBarClock"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_statusBar_to_statusBarIcon"
                app:destination="@id/statusBarIcon"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
        <action
                android:id="@+id/action_statusBar_to_statusBarNetWorkSpeed"
                app:destination="@id/statusBarNetWorkSpeed"
                app:enterAnim="@anim/fragment_enter"
                app:exitAnim="@anim/fragment_exit"
                app:popEnterAnim="@anim/fragment_enter_pop"
                app:popExitAnim="@anim/fragment_exit_pop" />
    </fragment>
    <fragment
            android:id="@+id/miscellaneous"
            android:name="com.luckyzyx.luckytool.ui.fragment.Miscellaneous"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/alphaBackupPro"
            android:name="com.luckyzyx.luckytool.ui.fragment.AlphaBackupPro"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/systemQuickEntry"
            android:name="com.luckyzyx.luckytool.ui.fragment.SystemQuickEntry"
            android:label="{title_label}" />
    <fragment
            android:id="@+id/statusBarNetWorkSpeed"
            android:name="com.luckyzyx.luckytool.ui.fragment.StatusBarNetWorkSpeed"
            android:label="{title_label}" />

</navigation>